# mkb10_bot

./: Makefile  config.py  main.py  pyproject.toml
mkb_bot/: MKB_dict.py  search_fun.py
