[tool.poetry]
name = "mkb-bot"
version = "0.1.0"
description = ""
authors = ["cynacmam"]
readme = "README.md"
packages = [{include = "mkb_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
